Adding styling for game components. Mapping cells based on internal state. Moving to redux later. Adding bootstrap cdn to index.html

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,3 +3,6 @@
 @import './sass/base/base';
 
 @import './sass/components/btn';
+@import './sass/components/gameCell';
+@import './sass/components/gameGrid';
+@import './sass/components/gameHeader';
