Using redux for app state management. Implementing styles for gameCells. Added logic to reducer to toggle current player & update gridcell. Refactoring GameScreen comp to be stateless. Might remove entirely later. Minor styling changes to accomodate refactorin.

--- a/src/sass/components/_gameCell.scss
+++ b/src/sass/components/_gameCell.scss
@@ -15,4 +15,12 @@
   &:hover {
     border: 1px solid $cell-highlight;
   }
+
+  &__item--red {
+    background-color: red;
+  }
+
+  &__item--black {
+    background-color: black;
+  }
 }
