Adding modal styles.

--- a/src/index.scss
+++ b/src/index.scss
@@ -6,3 +6,4 @@
 @import './sass/components/gameCell';
 @import './sass/components/gameGrid';
 @import './sass/components/gameHeader';
+@import './sass/components//modal';
