Adding round to gameheader comp. Adding win/draw screen. Minor styling changes. Adding new game action.

--- a/src/sass/components/_gameHeader.scss
+++ b/src/sass/components/_gameHeader.scss
@@ -1,5 +1,6 @@
 .GameHeader {
   display: flex;
+  flex-direction: column;
   background-color: grey;
   justify-content: center;
   align-items: center;
