--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -1,6 +1,7 @@
 .Modal {
   &__content {
     position: fixed;
+    min-width: 35rem;
     z-index: 500;
     background-color: white;
     border: 1px solid #ccc;
@@ -10,6 +11,7 @@
     top: 30%;
     box-sizing: border-box;
     transition: all 0.3s ease-out;
+    text-align: center;
   }
 
   &__backdrop {
